[gd_scene load_steps=4 format=3 uid="uid://dxn36bdkk4heb"]

[ext_resource type="Script" path="res://dialogo.gd" id="1_nj2wy"]
[ext_resource type="Texture2D" uid="uid://b33dtnt8b3vis" path="res://dialogbox.png" id="2_f0mcb"]
[ext_resource type="Texture2D" uid="uid://iypkv1fg17qu" path="res://assets/arlequin.png" id="3_vo0im"]

[node name="Dialogo" type="Node2D"]
position = Vector2(5, 508)
script = ExtResource("1_nj2wy")

[node name="Base" type="Sprite2D" parent="."]
position = Vector2(571, 37)
texture = ExtResource("2_f0mcb")

[node name="Texto" type="RichTextLabel" parent="."]
z_index = 1
offset_left = 246.0
offset_top = -26.0
offset_right = 1149.0
offset_bottom = 135.0
theme_override_font_sizes/normal_font_size = 32

[node name="Letras" type="Timer" parent="."]
wait_time = 0.05

[node name="Retrato" type="Sprite2D" parent="."]
position = Vector2(105, 20)
scale = Vector2(-1, 1)
texture = ExtResource("3_vo0im")

[node name="Timeout" type="Timer" parent="."]
wait_time = 4.0

[node name="Timein" type="Timer" parent="."]

[connection signal="listo" from="." to="." method="_on_listo"]
[connection signal="timeout" from="Letras" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timeout" to="." method="_on_timeout_timeout"]
[connection signal="timeout" from="Timein" to="." method="_on_timein_timeout"]
